Did stuff and added workspace metadata